Add some mods, Remove ore smelting recipes

--- a/modlist.html
+++ b/modlist.html
@@ -1,15 +1,51 @@
 ﻿<ul>
-<li><a href="https://minecraft.curseforge.com/mc-mods/239197">CraftTweaker (by Jaredlll08)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/265917">JEI Integration (by SnowShock35)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/318255">Phosphor (by jellysquid_)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/237167">FTB Library (by LatvianModder)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/220318">Biomes O' Plenty (by Forstride)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/267602">ConnectedTexturesMod (by tterrag1098)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/230497">Chameleon (by Texelsaur)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/248787">AppleSkin (by squeek502)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/309674">Item Filters (by LatvianModder)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/235279">Chisel (by tterrag1098)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/231095">Chisels & Bits (by AlgorithmX2)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/242818">CodeChicken Lib 1.8.+ (by covers1624)</a></li>
-<li><a href="https://minecraft.curseforge.com/mc-mods/230976">Fast Leaf Decay (by olafskiii)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/293752">Essentials (by Technomancer_isTaken)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/228404">Actually Additions (by Ellpeck)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/324717">Jade (by Snownee_)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/224712">Wawla - What Are We Looking At (by DarkhaxDev)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/253211">MTLib (by Jaredlll08)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/267602">ConnectedTexturesMod (by tterrag1098)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/228832">Guide-API (by TehNut)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/258426">Forge MultiPart CBE (by covers1624)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/228702">Project Red - Base (by MrTJP)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/235279">Chisel (by tterrag1098)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/221857">Pam's HarvestCraft (by pamharvestcraft)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/242818">CodeChicken Lib 1.8.+ (by covers1624)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/309674">Item Filters (by LatvianModder)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/237065">ContentTweaker (by Jaredlll08)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/240630">Just Enough Resources (JER) (by way2muchnoise)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/230497">Chameleon (by Texelsaur)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/291874">Serene Seasons (by TheAdubbz)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/289412">FTB Quests (by LatvianModder)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/250231">Crossroads MC (by Technomancer_isTaken)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/69118">Morpheus (by Quetzi)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/267769">Traverse: Legacy Continued (by ProspectorDev)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/238590">Flat Colored Blocks (by AlgorithmX2)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/229002">MrTJPCore (by MrTJP)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/314904">FTB Backups (by LatvianModder)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/32274">JourneyMap (by techbrew)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/230111">Project Red - Fabrication (by MrTJP)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/237102">FTB Utilities (by LatvianModder)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/51195">Railcraft (by Covert_Jaguar)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/79287">Waila Harvestability (by squeek502)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/228756">Iron Chests (by ProgWML6)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/220954">ModTweaker (by Jaredlll08)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/231095">Chisels & Bits (by AlgorithmX2)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/238222">Just Enough Items (JEI) (by mezz)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/229045">Project Red - Integration (by MrTJP)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/229048">Project Red - Mechanical (by MrTJP)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/229049">Project Red - World (by MrTJP)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/246996">B.A.S.E (by lanse505)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/229050">Project Red - Compat (by MrTJP)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/238372">Neat (by Vazkii)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/230976">Fast Leaf Decay (by olafskiii)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/223852">Storage Drawers (by Texelsaur)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/283037">Logistical Automation (by Zundrel)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/248787">AppleSkin (by squeek502)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/239197">CraftTweaker (by Jaredlll08)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/253449">Hwyla (by TehNut)</a></li>
 </ul>
