--- a/modlist.html
+++ b/modlist.html
@@ -17,6 +17,7 @@
 <li><a href="https://minecraft.curseforge.com/mc-mods/242818">CodeChicken Lib 1.8.+ (by covers1624)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/309674">Item Filters (by LatvianModder)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/237065">ContentTweaker (by Jaredlll08)</a></li>
+<li><a href="https://minecraft.curseforge.com/mc-mods/224190">Funky Locomotion (by RWTema)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/240630">Just Enough Resources (JER) (by way2muchnoise)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/230497">Chameleon (by Texelsaur)</a></li>
 <li><a href="https://minecraft.curseforge.com/mc-mods/291874">Serene Seasons (by TheAdubbz)</a></li>
